--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+/* 
+구름많음 background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+구름적음 background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+맑음 background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+
+
+ */
 
 @font-face {
     font-family: 'omyu_pretty';
@@ -23,15 +30,18 @@
     margin: 100px auto 0;
     /* border: 1px solid blue; */
     border-radius: 50px;
-    text-align: center;
-    
+    text-align: center;    
     font-family: 'omyu_pretty';
     color: #fff;
-    background-image: url(../image/Partly\ Cloudy.jpg);
+   
+    background-image: linear-gradient(to top, #a86e54 0%, #ace0f9 100%);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover  ;
    
+}
+h2 {
+    padding-top: 40px;
 }
 .form {
     display: flex;
@@ -39,7 +49,7 @@
     gap: 30px;
 }
 .form input {
-    border: 1px solid #ddd;
+    border: 1px solid #fff;
     outline: none;
     width: 200px;
     height: 30px;
@@ -54,7 +64,9 @@
 }
 
 .form button {
-    border: 1px solid #ddd;
+    border: 1px solid #fff;
+    background-color: #fff;
+    box-sizing: border-box; 
     outline: none;
     width: 50px;
     height: 30px;
@@ -63,6 +75,7 @@
     
     font-family: 'omyu_pretty';
     font-size: 20px;
+    cursor: pointer;
 }
 
 h2 {
