--- a/css/style.css
+++ b/css/style.css
@@ -15,39 +15,62 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* reset */
 * {
     margin: 0;
     padding: 0;
     list-style: none;
+
+}
+
+body {
+    background-color: #fff;
 }
 
 
 
 #wrap {
-       
+
     width: 640px;
     margin: 100px auto 0;
     /* border: 1px solid blue; */
     border-radius: 50px;
-    text-align: center;    
-    font-family: 'omyu_pretty';
+    text-align: center;
+    font-family: 'GmarketSansMedium';
     color: #fff;
-   
-    background-image: linear-gradient(to top, #a86e54 0%, #ace0f9 100%);
+ background-color: #3F72AF;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover  ;
-   
+    background-size: cover;
+
 }
+
+.cover {
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+    /* border-radius: 50px; */
+}
+
 h2 {
     padding-top: 40px;
+    font-size: 48px;
 }
+
 .form {
     display: flex;
     justify-content: center;
     gap: 30px;
 }
+
 .form input {
     border: 1px solid #fff;
     outline: none;
@@ -56,7 +79,7 @@ h2 {
     border-radius: 10px;
     /* margin-left: 80px; */
     padding-left: 10px;
-    font-family: 'omyu_pretty';
+    font-family: 'GmarketSansMedium';
     font-size: 20px;
     background-color: transparent;
     box-sizing: border-box;
@@ -66,15 +89,16 @@ h2 {
 .form button {
     border: 1px solid #fff;
     background-color: #fff;
-    box-sizing: border-box; 
+    box-sizing: border-box;
     outline: none;
-    width: 50px;
+    width: 40px;
     height: 30px;
     border-radius: 10px;
     /* margin-left: 80px; */
     
-    font-family: 'omyu_pretty';
-    font-size: 20px;
+    font-family: 'GmarketSansMedium';
+    /* padding: 4px; */
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -85,6 +109,7 @@ h2 {
 .form {
     margin-top: 20px;
 }
+
 .weather {
     margin: 0 auto;
     /* width: 200px; */
@@ -97,4 +122,3 @@ h2 {
 .weather div {
     margin-top: 40px;
 }
-
